--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext{
+        version_lifecycle = "2.2.0"
+        version_kotlin = "1.3.72"
+
+    }
     repositories {
         google()
         mavenCentral()
