--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "com.android.tools.build:gradle:7.4.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
