--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,14 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()
+//        maven {
+//            name = "TarsosDSP repository"
+//            url = "https://mvn.0110.be/releases"
+//        }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.4.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
+        classpath "com.android.tools.build:gradle:7.4.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.21"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
 
 
