--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.0'
+        classpath 'com.android.tools.build:gradle:8.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.21"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.5"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.6"
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +20,7 @@ buildscript {
 
 plugins {
     id("com.google.devtools.ksp") version "1.9.20-1.0.14" apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
 }
 
 tasks.register('clean', Delete) {
