--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
             android:largeHeap="true"
-        android:theme="@style/MainStyle">
+        android:theme="@style/MainMenuButtonStyle">
 
         <activity
             android:name=".MainActivity"
