--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.21"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.7"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.8.6"
+        classpath "io.realm:realm-gradle-plugin:10.19.0"
 
 
         // NOTE: Do not place your application dependencies here; they belong
