--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 12 05:41:58 EET 2023
-sdk.dir=C\:\\Users\\georg\\AppData\\Local\\Android\\Sdk
+#Tue Feb 11 17:10:35 EET 2025
+sdk.dir=C\:\\Users\\selft\\AppData\\Local\\Android\\Sdk
