--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
 plugins {
     id("com.google.devtools.ksp") version "1.9.20-1.0.14" apply false
     id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
+    id 'io.realm.kotlin' version '1.16.0' apply false
 }
 
 tasks.register('clean', Delete) {
