--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
             android:largeHeap="true"
-        android:theme="@style/MainMenuButtonStyle">
+            android:theme="@style/Theme.MyApp">
 
         <activity
             android:name=".MainActivity"
