restore: Oboe implementation from working commit ab68369 - Reverted to commit where Oboe was properly implemented and OpenSL was removed - Added OboeOutput.cpp to CMakeLists.txt - Added Oboe dependency to build.gradle - Fixed local.properties SDK path

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(audioworkstation SHARED
 	# engine sources
 	engine/AudioEngine.cpp
 	engine/JNI_Bridge.cpp
+	engine/OboeOutput.cpp
 )
 
 # Link libraries to your target
