--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
 
     implementation 'commons-io:commons-io:2.13.0'
     implementation 'com.github.wendykierp:JTransforms:3.1'
+    implementation 'com.google.oboe:oboe:1.9.0'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
