--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Feb 11 20:58:19 EET 2025
-sdk.dir=C:\\Users\\selft\\AppData\\Local\\Android\\Sdk
+sdk.dir=C:\\Users\\georg\\AppData\\Local\\Android\\Sdk
