--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.plugin.compose'
     id 'com.google.devtools.ksp'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -26,7 +27,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-
 }
 
 kotlin {
@@ -39,8 +39,12 @@ dependencies {
     implementation("androidx.appcompat:appcompat:1.7.1")
     implementation("androidx.datastore:datastore-preferences:1.2.0")
 
+    // -------- Hilt (через KSP) --------
+    implementation "com.google.dagger:hilt-android:2.59.1"
+    ksp "com.google.dagger:hilt-compiler:2.59.1"
+    implementation "androidx.hilt:hilt-navigation-compose:1.3.0"
 
-    // -------- Compose ----------
+    // -------- Compose --------
     def composeBom = platform("androidx.compose:compose-bom:2026.02.00")
     implementation composeBom
     androidTestImplementation composeBom
@@ -53,8 +57,6 @@ dependencies {
 
     implementation("androidx.core:core-splashscreen:1.2.0")
 
-
-
     // Navigation Compose
     implementation "androidx.navigation:navigation-compose:2.9.7"
 
@@ -63,30 +65,31 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.10.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.10.0"
 
-    // -------- Room ----------
+    // -------- Room (через KSP) --------
     implementation "androidx.room:room-runtime:2.8.4"
     implementation "androidx.room:room-ktx:2.8.4"
     ksp "androidx.room:room-compiler:2.8.4"
 
-    // -------- Core ----------
+    // -------- Core --------
     implementation "androidx.core:core-ktx:1.17.0"
     implementation "androidx.activity:activity-compose:1.12.4"
 
-    // -------- Coroutines ----------
+    // -------- Coroutines --------
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
 
-    // -------- Audio ----------
+    // -------- Audio --------
     implementation 'commons-io:commons-io:2.21.0'
     implementation 'com.github.wendykierp:JTransforms:3.2'
     implementation 'com.google.oboe:oboe:1.10.0'
 
-    // -------- Test ----------
+    // -------- Test --------
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
 
     implementation "com.google.android.material:material:1.13.0"
 }
+
 
 
 
