--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 plugins {
     id 'com.android.application' version '9.0.1' apply false
     id 'org.jetbrains.kotlin.plugin.compose' version '2.3.10' apply false
-    id 'com.google.devtools.ksp' version '2.3.2' apply false
-    id 'androidx.navigation.safeargs.kotlin' version '2.9.7' apply false
+    id 'com.google.devtools.ksp' version '2.3.5' apply false
+    id 'com.google.dagger.hilt.android' version '2.59.1' apply false
 }
 
 tasks.register("clean", Delete) {
     delete(layout.buildDirectory)
 }
+
 
 
 
